[package]
name = "milionares_api"
version = "0.1.0"
authors = ["Krzysztof Kania <kontakt@krzysztofkania.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
dotenv = "0.15.0"
postgres = "0.17.3"
serde = { version = "1.0.110", features = ["derive"] }
reqwest = "0.9.24"
serde_json = "1.0.53"


[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]